# fashion-assist

./: ..cursorrules  .gitignore  README.md  app.py  download_test_images.py  pipeline.py  project_structure.md  pyproject.toml  run_pipeline.py  test_fashion_clip.py  test_integration.py  test_pipeline.py
data/: wardrobe_items.json
docs/: demo_script.md  development_rules.md  fashion_assist_poc_spec.md  implementation_guide.md
models/: fashion_clip.py  llm_validator.py
tests/: test_fashion_assist.py
utils/: scraper.py
